--- a/references.bib
+++ b/references.bib
@@ -145,3 +145,65 @@
 }
 
 
+@article{milly2008stationarity,
+  title={Stationarity is dead: Whither water management?},
+  author={Milly, Paul CD and Betancourt, Julio and Falkenmark, Malin and Hirsch, Robert M and Kundzewicz, Zbigniew W and Lettenmaier, Dennis P and Stouffer, Ronald J},
+  journal={Science},
+  volume={319},
+  number={5863},
+  pages={573--574},
+  year={2008},
+  publisher={American Association for the Advancement of Science}
+}
+
+@article{shao2024research,
+  title={Research on the degree of non-stationarity in extreme precipitation in the continental United States},
+  author={Shao, Junbo and Wang, Jingcai and Wang, Wenyue and Li, Fan and Wu, Chen},
+  journal={Water Resources Management},
+  volume={38},
+  number={2},
+  pages={537--551},
+  year={2024},
+  publisher={Springer}
+}
+
+@article{pielke2009collateral,
+  title={Collateral damage from the death of stationarity},
+  author={Pielke Jr, RA},
+  journal={GWEX News (May)},
+  pages={5--7},
+  year={2009}
+}
+
+@article{villarini2009flood,
+  title={Flood frequency analysis for nonstationary annual peak records in an urban drainage basin},
+  author={Villarini, Gabriele and Smith, James A and Serinaldi, Francesco and Bales, Jerad and Bates, Paul D and Krajewski, Witold F},
+  journal={Advances in water resources},
+  volume={32},
+  number={8},
+  pages={1255--1266},
+  year={2009},
+  publisher={Elsevier}
+}
+
+@article{merz2012hess,
+  title={HESS Opinions" More efforts and scientific rigour are needed to attribute trends in flood time series"},
+  author={Merz, Bruno and Vorogushyn, Sergiy and Uhlemann, Steffi and Delgado, J and Hundecha, Yeshewatesfa},
+  journal={Hydrology and Earth System Sciences},
+  volume={16},
+  number={5},
+  pages={1379--1387},
+  year={2012},
+  publisher={Copernicus GmbH}
+}
+
+@article{merz2021causes,
+  title={Causes, impacts and patterns of disastrous river floods},
+  author={Merz, Bruno and Bl{\"o}schl, G{\"u}nter and Vorogushyn, Sergiy and Dottori, Francesco and Aerts, Jeroen CJH and Bates, Paul and Bertola, Miriam and Kemter, Matthias and Kreibich, Heidi and Lall, Upmanu and others},
+  journal={Nature Reviews Earth \& Environment},
+  volume={2},
+  number={9},
+  pages={592--609},
+  year={2021},
+  publisher={Nature Publishing Group UK London}
+}
