--- a/11_Flood_Return_Interval/Flood_Return_Inverval.tex
+++ b/11_Flood_Return_Interval/Flood_Return_Inverval.tex
@@ -83,9 +83,9 @@
   {\end{description}}
 
 
-\title{Flood Interval Analysis}
+\title{Flood Frequncy Analysis}
 \author{EA030}
-\date{\today~ver. 0.32}
+\date{\today~ver. 0.42}
 \setkeys{Gin}{width=\linewidth,totalheight=\textheight,keepaspectratio}
 % \graphicspath{{graphics/}}
 
@@ -115,6 +115,8 @@ Hydrology is the scientific study of the movement, distribution, and quality of 
 
 Hydrology began to formalize as a science in the 17th and 18th centuries with pioneers like Pierre Perrault and Edmund Halley, who quantified rainfall and streamflow. By the 19th century, the rise of civil engineering demanded more precise understanding of water systems for designing infrastructure. Today, hydrology is an interdisciplinary field integrating tools like GIS, remote sensing, and computer models to address modern challenges such as flood risk, water security, and climate change.
 
+NOTE: Need to add a discussion of stationarity \citep{merz2021causes,shao2024research, pielke2009collateral}.
+
 \subsection{USGS Stations and Methods}
 
 The United States Geological Survey (USGS) plays a central role in monitoring water resources across the country. As part of its mission to provide impartial scientific information about the natural environment, the USGS operates one of the world’s most extensive and long-standing networks of streamgages, which are used to monitor river and streamflow conditions in real time.
@@ -122,6 +124,8 @@ The United States Geological Survey (USGS) plays a central role in monitoring wa
 The USGS streamgaging network consists of over 10,000 active stations located throughout the United States, including Alaska, Hawaii, and U.S. territories. These stations collect continuous data on stream discharge, stage (water height), temperature, and sometimes sediment or water quality. Many stations transmit data via satellite or radio every 15 to 60 minutes, making real-time information publicly available through the USGS National Water Information System (NWIS).
 
 This network supports a wide range of applications, including flood forecasting, drought monitoring, water resource management, ecological studies, infrastructure design, and emergency response. Federal, state, and local agencies, as well as private sector users and researchers, rely heavily on USGS data for planning and decision-making.
+
+%# https://waterdata.usgs.gov/nwis/measurements?site_no=03287500&agency_cd=USGS&format=rdb
 
 \begin{marginfigure}
 	\centering
@@ -152,7 +156,7 @@ A hydrograph displays how river discharge responds to a rainfall event. Its key 
 
 \subsection{Flood Return Interval}
 
-lood intervals, also known as return periods, estimate how often extreme flood events are likely to occur. These estimates are critical for evaluating flood risk and informing infrastructure design, emergency planning, and land-use decisions. By understanding flood frequency, communities can build safer systems and reduce vulnerability to damaging events.
+Flood intervals, also known as return periods, estimate how often extreme flood events are likely to occur. These estimates are critical for evaluating flood risk and informing infrastructure design, emergency planning, and land-use decisions. By understanding flood frequency, communities can build safer systems and reduce vulnerability to damaging events.
 
 Return periods are used in engineering and environmental planning. Civil engineers design infrastructure like bridges and dams based on specific flood intervals (e.g., 100-year floods). Urban planners and insurance programs such as FEMA's National Flood Insurance Program use them to guide development and define hazard zones. Scientists also apply flood interval data to study ecosystems and assess climate-related changes in flood behavior.
 
@@ -163,6 +167,7 @@ Return periods are used in engineering and environmental planning. Civil enginee
 	\label{fig:USGS_Discharge_20250405}
 \end{figure}
 
+Broadly speaking, flood frequency analysis (FFA) can be conducted using two main approaches based on the assumed behavior of floods over time: stationary FFA (S-FFA) and nonstationary FFA (NS-FFA). In S-FFA, flood events are typically assumed to be independent and identically distributed (i.i.d.), implying that they originate from a stationary stochastic process. This assumption entails that the statistical properties of flood extremes—such as mean, variance, and distribution—remain constant over time \citep{villarini2009flood}. However, mounting evidence suggests that this assumption may no longer hold due to various anthropogenic and environmental factors, including climate change \citep{milly2008stationarity}, land use and land cover changes, and alterations in water infrastructure and management practices such as dam operations \citep{merz2012hess}. These dynamic influences necessitate the adoption of NS-FFA approaches, which allow the statistical characteristics of floods to vary over time in response to covariates.
 
 \section{Methods for Estimating Flood Intervals}
 
@@ -177,7 +182,7 @@ T = \frac{n + 1}{m}
 \]
 
 
-\noindent Where:
+\noindent where:
 \begin{itemize*}
   \item \( n \) is the number of years of data
   \item \( m \) is the rank (1 = largest)
@@ -185,12 +190,78 @@ T = \frac{n + 1}{m}
 
 This method does not assume any underlying distribution.
 
-\begin{verbatim}
-# test implementaton in R --- TBA
+\newthought{R Code Example}
 
-\end{verbatim}
+\begin{knitrout}
+\definecolor{shadecolor}{rgb}{0.969, 0.969, 0.969}\color{fgcolor}\begin{kframe}
+\begin{alltt}
+\hlcom{# Below is an R code chunk that demonstrates how to }
+\hlcom{# calculate flood intervals using annual peak discharge data.}
+
+\hlcom{# Sample annual peak discharge data (in cubic meters per second)}
+\hlstd{discharge} \hlkwb{<-} \hlkwd{c}\hlstd{(}\hlnum{400}\hlstd{,} \hlnum{520}\hlstd{,} \hlnum{610}\hlstd{,} \hlnum{700}\hlstd{,} \hlnum{650}\hlstd{,} \hlnum{720}\hlstd{,} \hlnum{800}\hlstd{,} \hlnum{750}\hlstd{,} \hlnum{680}\hlstd{,} \hlnum{670}\hlstd{)}
+
+\hlcom{# Sort in descending order}
+\hlstd{sorted_discharge} \hlkwb{<-} \hlkwd{sort}\hlstd{(discharge,} \hlkwc{decreasing} \hlstd{=} \hlnum{TRUE}\hlstd{)}
+
+\hlcom{# Rank and return period}
+\hlstd{rank} \hlkwb{<-} \hlnum{1}\hlopt{:}\hlkwd{length}\hlstd{(sorted_discharge)}
+\hlstd{n} \hlkwb{<-} \hlkwd{length}\hlstd{(discharge)}
+\hlstd{return_period} \hlkwb{<-} \hlstd{(n} \hlopt{+} \hlnum{1}\hlstd{)} \hlopt{/} \hlstd{rank}
+
+\hlcom{# Create a data frame}
+\hlstd{flood_data} \hlkwb{<-} \hlkwd{data.frame}\hlstd{(}
+  \hlkwc{Rank} \hlstd{= rank,}
+  \hlkwc{Discharge} \hlstd{= sorted_discharge,}
+  \hlkwc{Return_Period} \hlstd{= return_period}
+\hlstd{)}
+\end{alltt}
+\end{kframe}
+\end{knitrout}
+
+Below is the table of calculated return periods for each ranked discharge.
+
+% latex table generated in R 4.2.2 by xtable 1.8-4 package
+% Sun Apr  6 17:49:31 2025
+\begin{table}[ht]
+\centering
+\begin{tabular}{rrrr}
+  \hline
+ & Rank & Discharge & Return\_Period \\ 
+  \hline
+1 &   1 & 800.00 & 11.00 \\ 
+  2 &   2 & 750.00 & 5.50 \\ 
+  3 &   3 & 720.00 & 3.67 \\ 
+  4 &   4 & 700.00 & 2.75 \\ 
+  5 &   5 & 680.00 & 2.20 \\ 
+  6 &   6 & 670.00 & 1.83 \\ 
+  7 &   7 & 650.00 & 1.57 \\ 
+  8 &   8 & 610.00 & 1.38 \\ 
+  9 &   9 & 520.00 & 1.22 \\ 
+  10 &  10 & 400.00 & 1.10 \\ 
+   \hline
+\end{tabular}
+\caption{Flood Return Period Table} 
+\end{table}
+
+
+
+\begin{marginfigure}
+\begin{knitrout}
+\definecolor{shadecolor}{rgb}{0.969, 0.969, 0.969}\color{fgcolor}
+\includegraphics[width=\maxwidth]{figure/flood_plot-1} 
+\end{knitrout}
+\caption{Discharge versus return period on a semi-logarithmic scale.}
+\end{marginfigure}
 
 \subsection{2. Gumbel Distribution (Extreme Value Type I)}
+
+\begin{marginfigure}
+	\centering
+		\includegraphics[width=1.00\textwidth]{figure/Gumbel-Density.png}
+		\caption{Gumbel Density Distribution.}
+	\label{fig:Gumbel}
+\end{marginfigure}
 
 A commonly used theoretical distribution for modeling annual maxima is the Gumbel distribution. The return period is related to the probability of exceedance \( P \) as:
 
@@ -206,9 +277,19 @@ F(x) = \exp\left[-\exp\left(-\frac{x - \mu}{\beta}\right)\right]
 
 Where \( \mu \) is the location parameter and \( \beta \) is the scale parameter. These can be estimated using method of moments or maximum likelihood.
 
+\newthought{R Code Example}
+
+\begin{verbatim}
+# test implementaton in R --- TBD
+\end{verbatim}
+
 \subsection{3. Log-Pearson Type III Distribution}
 
-This method is widely recommended in the United States for flood frequency analysis. It applies a Pearson Type III distribution to the log-transformed discharge data. The procedure involves:
+This method is widely recommended in the United States for flood frequency analysis. It applies a Pearson Type III distribution to the log-transformed discharge data.
+
+The Log-Pearson Type III distribution (LP3) is a statistical distribution used in hydrologic frequency analysis, particularly for flood frequency analysis, to model the probability of extreme events. It's a generalized gamma distribution that accounts for skewness, making it suitable for data that isn't normally distributed.
+
+The procedure involves:
 
 \begin{itemize*}
   \item Taking the logarithm of the discharge data
@@ -216,9 +297,12 @@ This method is widely recommended in the United States for flood frequency analy
   \item Using these to estimate quantiles for different return periods
 \end{itemize*}
 
+\newthought{R Code Example}
+
 \begin{knitrout}
 \definecolor{shadecolor}{rgb}{0.969, 0.969, 0.969}\color{fgcolor}\begin{kframe}
 \begin{alltt}
+\hlcom{# Needs to be explained with details for each line... :-)}
 \hlcom{# Load necessary library}
 \hlkwa{if} \hlstd{(}\hlopt{!}\hlkwd{require}\hlstd{(e1071))} \hlkwd{install.packages}\hlstd{(}\hlstr{"e1071"}\hlstd{,} \hlkwc{dependencies} \hlstd{=} \hlnum{TRUE}\hlstd{)}
 \end{alltt}
@@ -259,33 +343,52 @@ This method is widely recommended in the United States for flood frequency analy
 \end{kframe}
 \end{knitrout}
 
-\begin{knitrout}
-\definecolor{shadecolor}{rgb}{0.969, 0.969, 0.969}\color{fgcolor}\begin{kframe}
-\begin{verbatim}
-## % latex table generated in R 4.2.2 by xtable 1.8-4 package
-## % Sun Apr  6 12:58:10 2025
-## \begin{table}[ht]
-## \centering
-## \begin{tabular}{rrrr}
-##   \hline
-##  & Return\_Period & Exceedance\_Prob & Discharge\_Estimate \\ 
-##   \hline
-## 1 & 2.00 & 0.50 & 663.81 \\ 
-##   2 & 5.00 & 0.80 & 766.28 \\ 
-##   3 & 10.00 & 0.90 & 808.48 \\ 
-##   4 & 25.00 & 0.96 & 842.30 \\ 
-##   5 & 50.00 & 0.98 & 857.23 \\ 
-##   6 & 100.00 & 0.99 & 865.72 \\ 
-##    \hline
-## \end{tabular}
-## \end{table}
-\end{verbatim}
-\end{kframe}
-\end{knitrout}
+% latex table generated in R 4.2.2 by xtable 1.8-4 package
+% Sun Apr  6 17:49:31 2025
+\begin{table}[ht]
+\centering
+\begin{tabular}{rrrr}
+  \hline
+ & Return\_Period & Exceedance\_Prob & Discharge\_Estimate \\ 
+  \hline
+1 & 2.00 & 0.50 & 663.81 \\ 
+  2 & 5.00 & 0.80 & 766.28 \\ 
+  3 & 10.00 & 0.90 & 808.48 \\ 
+  4 & 25.00 & 0.96 & 842.30 \\ 
+  5 & 50.00 & 0.98 & 857.23 \\ 
+  6 & 100.00 & 0.99 & 865.72 \\ 
+   \hline
+\end{tabular}
+\end{table}
+
 
 \subsection{4. Bayesian Methods}
 
 Bayesian approaches allow incorporating prior information and uncertainty in parameter estimates. They are especially useful for short or regional datasets and are implemented via MCMC simulations.
+
+
+
+\newthought{R Code Example}
+\begin{knitrout}
+\definecolor{shadecolor}{rgb}{0.969, 0.969, 0.969}\color{fgcolor}\begin{kframe}
+\begin{alltt}
+\hlkwd{library}\hlstd{(nsRFA)}
+\hlkwd{set.seed}\hlstd{(}\hlnum{2988}\hlstd{)}
+\hlstd{serie} \hlkwb{<-} \hlkwd{rand.GEV}\hlstd{(}\hlnum{120}\hlstd{,} \hlkwc{xi}\hlstd{=}\hlnum{40}\hlstd{,} \hlkwc{alfa}\hlstd{=}\hlnum{20}\hlstd{,} \hlkwc{k}\hlstd{=}\hlopt{-}\hlnum{0.4}\hlstd{)}
+\hlstd{serie100} \hlkwb{<-} \hlstd{serie[}\hlnum{1}\hlopt{:}\hlnum{100}\hlstd{]}
+\hlstd{serie100[serie100} \hlopt{<} \hlnum{250}\hlstd{]} \hlkwb{<-} \hlnum{NA}
+\hlstd{serie20} \hlkwb{<-} \hlstd{serie[}\hlnum{101}\hlopt{:}\hlnum{120}\hlstd{]}
+\hlstd{serie} \hlkwb{<-} \hlkwd{c}\hlstd{(serie100, serie20)}
+
+
+\hlkwd{plot}\hlstd{(serie,} \hlkwc{type}\hlstd{=}\hlstr{"h"}\hlstd{,} \hlkwc{ylim}\hlstd{=}\hlkwd{c}\hlstd{(}\hlnum{0}\hlstd{,} \hlnum{600}\hlstd{),} \hlkwc{xlab}\hlstd{=}\hlstr{""}\hlstd{,}
+     \hlkwc{ylab}\hlstd{=}\hlstr{"Annual flood peaks [m3/s]"}\hlstd{,} \hlkwc{lwd}\hlstd{=}\hlnum{3}\hlstd{)}
+\hlkwd{abline}\hlstd{(}\hlkwc{h}\hlstd{=}\hlnum{0}\hlstd{)}
+\hlkwd{points}\hlstd{(serie100,} \hlkwc{col}\hlstd{=}\hlnum{2}\hlstd{)}
+\end{alltt}
+\end{kframe}
+\includegraphics[width=\maxwidth]{figure/unnamed-chunk-3-1} 
+\end{knitrout}
 
 \subsection{5. Regional Frequency Analysis (RFA)}
 
@@ -309,166 +412,54 @@ Where:
 
 These methods are often evaluated based on goodness-of-fit tests, diagnostic plots, and expert judgment.
 
-\section{Using R to Estimate Flood Return Invervals}
 
-\subsection{Annual Peak Flow}
+\newthought{R Code Example}
 
-\begin{knitrout}
-\definecolor{shadecolor}{rgb}{0.969, 0.969, 0.969}\color{fgcolor}\begin{kframe}
-\begin{alltt}
-\hlcom{# Eel River Max Dishcharge for USGS Record}
-\hlkwd{library}\hlstd{(fields)}
-\hlcom{# Use Stream_Hydrography_Analysis to create Eel.df}
-
-\hlcom{# Find Yearly Max flow...}
-
-\hlstd{Eel}\hlopt{$}\hlstd{year} \hlkwb{<-} \hlkwd{as.Date}\hlstd{(Eel}\hlopt{$}\hlstd{date,} \hlstr{"%Y"}\hlstd{)}
-\hlstd{Eel}\hlopt{$}\hlstd{maxq} \hlkwb{<-} \hlnum{NA}
-
-
-\hlkwd{aggregate}\hlstd{(Eel}\hlopt{$}\hlstd{Discharge,} \hlkwd{list}\hlstd{(Eel}\hlopt{$}\hlstd{year), max)} \hlkwb{->} \hlstd{tmp}
-\hlkwd{names}\hlstd{(tmp)} \hlkwb{<-} \hlkwd{c}\hlstd{(}\hlstr{"year"}\hlstd{,} \hlstr{"Discharge"}\hlstd{)}
-\hlkwd{par}\hlstd{(}\hlkwc{mar}\hlstd{=}\hlkwd{c}\hlstd{(}\hlnum{2}\hlstd{,} \hlnum{4.3}\hlstd{,} \hlnum{1}\hlstd{,} \hlnum{0}\hlstd{)} \hlopt{+} \hlnum{0.1}\hlstd{,} \hlkwc{cex}\hlstd{=}\hlnum{1.8}\hlstd{)}
-\hlkwd{barplot}\hlstd{(tmp}\hlopt{$}\hlstd{Discharge,} \hlkwc{names.arg}\hlstd{=}\hlkwd{format}\hlstd{(tmp}\hlopt{$}\hlstd{year,} \hlstr{"%Y"}\hlstd{),} \hlkwc{tcl}\hlstd{=} \hlopt{-}\hlnum{0.3}\hlstd{,} \hlkwc{xaxt}\hlstd{=}\hlstr{"n"}\hlstd{,} \hlkwc{ylim}\hlstd{=}\hlkwd{c}\hlstd{(}\hlnum{0}\hlstd{,}\hlnum{20000}\hlstd{),} \hlkwc{ylab}\hlstd{=}\hlstr{""}\hlstd{,} \hlkwc{las}\hlstd{=}\hlnum{1}\hlstd{)}
-\hlkwd{mtext}\hlstd{(}\hlstr{"Discharge (m3/s)"}\hlstd{,} \hlnum{2}\hlstd{,} \hlkwc{line}\hlstd{=}\hlnum{3.5}\hlstd{,} \hlkwc{cex}\hlstd{=}\hlnum{1.8}\hlstd{)}
-\hlkwd{mtext}\hlstd{(}\hlstr{"Year"}\hlstd{,} \hlnum{1}\hlstd{,} \hlkwc{line}\hlstd{=}\hlnum{0}\hlstd{,} \hlkwc{cex}\hlstd{=}\hlnum{1.5}\hlstd{)}
-
-\hlkwd{arrow.plot}\hlstd{(}\hlnum{50}\hlstd{,} \hlnum{15600}\hlstd{,} \hlnum{90}\hlstd{,} \hlnum{12000}\hlstd{,} \hlkwc{arrow.ex}\hlstd{=}\hlnum{14}\hlstd{,} \hlkwc{length}\hlstd{=}\hlnum{.1}\hlstd{,} \hlkwc{col}\hlstd{=}\hlstr{'red'}\hlstd{,} \hlkwc{lwd}\hlstd{=}\hlnum{3}\hlstd{)}
-\hlkwd{text}\hlstd{(}\hlnum{36}\hlstd{,} \hlnum{15200}\hlstd{,} \hlstr{"1964"}\hlstd{,} \hlkwc{col}\hlstd{=}\hlstr{'red'}\hlstd{,} \hlkwc{cex}\hlstd{=}\hlnum{1}\hlstd{)}
-\end{alltt}
-\end{kframe}
-\end{knitrout}
-
-\subsection{Basic Example}
-
-Below is an R code chunk that demonstrates how to calculate flood intervals using annual peak discharge data.
-
-\begin{knitrout}
-\definecolor{shadecolor}{rgb}{0.969, 0.969, 0.969}\color{fgcolor}\begin{kframe}
-\begin{alltt}
-\hlcom{# Sample annual peak discharge data (in cubic meters per second)}
-\hlstd{discharge} \hlkwb{<-} \hlkwd{c}\hlstd{(}\hlnum{400}\hlstd{,} \hlnum{520}\hlstd{,} \hlnum{610}\hlstd{,} \hlnum{700}\hlstd{,} \hlnum{650}\hlstd{,} \hlnum{720}\hlstd{,} \hlnum{800}\hlstd{,} \hlnum{750}\hlstd{,} \hlnum{680}\hlstd{,} \hlnum{670}\hlstd{)}
-
-\hlcom{# Sort in descending order}
-\hlstd{sorted_discharge} \hlkwb{<-} \hlkwd{sort}\hlstd{(discharge,} \hlkwc{decreasing} \hlstd{=} \hlnum{TRUE}\hlstd{)}
-
-\hlcom{# Rank and return period}
-\hlstd{rank} \hlkwb{<-} \hlnum{1}\hlopt{:}\hlkwd{length}\hlstd{(sorted_discharge)}
-\hlstd{n} \hlkwb{<-} \hlkwd{length}\hlstd{(discharge)}
-\hlstd{return_period} \hlkwb{<-} \hlstd{(n} \hlopt{+} \hlnum{1}\hlstd{)} \hlopt{/} \hlstd{rank}
-
-\hlcom{# Create a data frame}
-\hlstd{flood_data} \hlkwb{<-} \hlkwd{data.frame}\hlstd{(}
-  \hlkwc{Rank} \hlstd{= rank,}
-  \hlkwc{Discharge} \hlstd{= sorted_discharge,}
-  \hlkwc{Return_Period} \hlstd{= return_period}
-\hlstd{)}
-\end{alltt}
-\end{kframe}
-\end{knitrout}
-
-
-\begin{knitrout}
-\definecolor{shadecolor}{rgb}{0.969, 0.969, 0.969}\color{fgcolor}\begin{kframe}
-\begin{alltt}
-\hlcom{# Print table}
-\hlkwd{print}\hlstd{(flood_data)}
-\end{alltt}
 \begin{verbatim}
-##    Rank Discharge Return_Period
-## 1     1       800     11.000000
-## 2     2       750      5.500000
-## 3     3       720      3.666667
-## 4     4       700      2.750000
-## 5     5       680      2.200000
-## 6     6       670      1.833333
-## 7     7       650      1.571429
-## 8     8       610      1.375000
-## 9     9       520      1.222222
-## 10   10       400      1.100000
+# test implementaton in R --- TBD
 \end{verbatim}
-\end{kframe}
-\end{knitrout}
+
+\section{Examples with R -- Estimating Flood Return Invervals}
+
+\subsection{Annual Peak Flow versus Daily Discharge}
+
+TBD
 
 
-\section{Flood Data Table}
-
-Below is the table of calculated return periods for each ranked discharge.
-
-\begin{knitrout}
-\definecolor{shadecolor}{rgb}{0.969, 0.969, 0.969}\color{fgcolor}\begin{kframe}
-\begin{verbatim}
-## % latex table generated in R 4.2.2 by xtable 1.8-4 package
-## % Sun Apr  6 12:58:10 2025
-## \begin{table}[ht]
-## \centering
-## \begin{tabular}{rrrr}
-##   \hline
-##  & Rank & Discharge & Return\_Period \\ 
-##   \hline
-## 1 &   1 & 800.00 & 11.00 \\ 
-##   2 &   2 & 750.00 & 5.50 \\ 
-##   3 &   3 & 720.00 & 3.67 \\ 
-##   4 &   4 & 700.00 & 2.75 \\ 
-##   5 &   5 & 680.00 & 2.20 \\ 
-##   6 &   6 & 670.00 & 1.83 \\ 
-##   7 &   7 & 650.00 & 1.57 \\ 
-##   8 &   8 & 610.00 & 1.38 \\ 
-##   9 &   9 & 520.00 & 1.22 \\ 
-##   10 &  10 & 400.00 & 1.10 \\ 
-##    \hline
-## \end{tabular}
-## \caption{Flood Return Period Table} 
-## \end{table}
-\end{verbatim}
-\end{kframe}
-\end{knitrout}
-
-\section*{Flood Frequency Plot}
-
-The following plot shows the discharge against its return period on a semi-logarithmic scale.
-
-\begin{knitrout}
-\definecolor{shadecolor}{rgb}{0.969, 0.969, 0.969}\color{fgcolor}
-\includegraphics[width=\maxwidth]{figure/flood_plot-1} 
-\end{knitrout}
 
 
-\section{Using USGS Data}
+\subsection{Using USGS Annual Peak Flow Data}
 
 \subsection{Load Required Packages}
 \begin{knitrout}
 \definecolor{shadecolor}{rgb}{0.969, 0.969, 0.969}\color{fgcolor}\begin{kframe}
 \begin{alltt}
 \hlcom{### STEP 1}
-
-
-\hlcom{### STEP 2}
 \hlcom{### Loading two specific packages into RWater}
 \hlkwd{library}\hlstd{(dataRetrieval)}
-\hlkwd{library}\hlstd{(xts)}
+\hlcom{# library(xts)}
 \end{alltt}
-
-
-{\ttfamily\noindent\itshape\color{messagecolor}{\#\# Loading required package: zoo}}
-
-{\ttfamily\noindent\itshape\color{messagecolor}{\#\# \\\#\# Attaching package: 'zoo'}}
-
-{\ttfamily\noindent\itshape\color{messagecolor}{\#\# The following objects are masked from 'package:base':\\\#\# \\\#\# \ \ \ \ as.Date, as.Date.numeric}}\end{kframe}
+\end{kframe}
 \end{knitrout}
 
-\subsection{Load Data}
+\subsection{Obtain Data from USGS}
+
+\begin{figure}
+	\centering
+		\includegraphics[width=1.00\textwidth]{figure/WhiteRiver.png}
+		\caption{White River, Arkansas, USGS gage 07052500. Annual peak flow frequency analysis for the period 2000-2025 (left) and 1980-2000 (right). The red dashed line indicates the 2025 projected peak flow.}
+	\label{fig:White River}
+\end{figure}
 
 \begin{knitrout}
 \definecolor{shadecolor}{rgb}{0.969, 0.969, 0.969}\color{fgcolor}\begin{kframe}
 \begin{alltt}
-\hlcom{### STEP 3}
+\hlcom{### STEP 2}
 \hlcom{### Get the Peak Annual Discharge}
 \hlstd{mysite} \hlkwb{<-} \hlstr{"07061000"}
 \hlstd{startDate} \hlkwb{=} \hlstr{""}
 \hlstd{endDate} \hlkwb{=} \hlstr{""}
 \hlstd{annualpeak}\hlkwb{<-}\hlkwd{readNWISpeak}\hlstd{(mysite, startDate, endDate)}
-\hlstd{Qmax_2025} \hlkwb{=} \hlnum{180000} \hlcom{#4/5/2025 11 CDT}
 
 \hlkwd{names}\hlstd{(annualpeak)[}\hlnum{1}\hlopt{:}\hlnum{5}\hlstd{]}
 \end{alltt}
@@ -476,6 +467,17 @@ The following plot shows the discharge against its return period on a semi-logar
 ## [1] "agency_cd" "site_no"   "peak_dt"   "peak_tm"  
 ## [5] "peak_va"
 \end{verbatim}
+\end{kframe}
+\end{knitrout}
+
+\subsection{Define Qmax for 2025}
+
+\begin{knitrout}
+\definecolor{shadecolor}{rgb}{0.969, 0.969, 0.969}\color{fgcolor}\begin{kframe}
+\begin{alltt}
+\hlcom{### STEP 3}
+\hlstd{Qmax_2025} \hlkwb{=} \hlnum{180000} \hlcom{#4/5/2025 11 CDT}
+\end{alltt}
 \end{kframe}
 \end{knitrout}
 
@@ -495,17 +497,17 @@ The following plot shows the discharge against its return period on a semi-logar
        \hlkwc{col}\hlstd{=}\hlkwd{c}\hlstd{(}\hlstr{"blue"}\hlstd{,} \hlstr{"red"}\hlstd{),} \hlkwc{pch}\hlstd{=}\hlkwd{c}\hlstd{(}\hlnum{19}\hlstd{,} \hlnum{NA}\hlstd{),} \hlkwc{cex} \hlstd{=} \hlnum{.7}\hlstd{,} \hlkwc{lty}\hlstd{=}\hlkwd{c}\hlstd{(}\hlnum{NA}\hlstd{,} \hlnum{2}\hlstd{))}
 \end{alltt}
 \end{kframe}
-\includegraphics[width=\maxwidth]{figure/unnamed-chunk-7-1} 
+\includegraphics[width=\maxwidth]{figure/unnamed-chunk-8-1} 
 \end{knitrout}
 
 
 
-\subsection{Determine Station Records Ranges ()}
-
+\subsection{Determine Station Records Ranges}
 
 \begin{knitrout}
 \definecolor{shadecolor}{rgb}{0.969, 0.969, 0.969}\color{fgcolor}\begin{kframe}
 \begin{alltt}
+\hlcom{### STEP 5}
 \hlstd{annualpeak} \hlkwb{=} \hlstd{annualpeak[}\hlkwd{complete.cases}\hlstd{(annualpeak}\hlopt{$}\hlstd{peak_va),]}
 \hlstd{annualpeak} \hlkwb{=} \hlstd{annualpeak[}\hlkwd{complete.cases}\hlstd{(annualpeak}\hlopt{$}\hlstd{peak_dt),]}
 \hlstd{dt_range} \hlkwb{=} \hlkwd{range}\hlstd{(annualpeak}\hlopt{$}\hlstd{peak_dt);dt_range}
@@ -527,7 +529,7 @@ The following plot shows the discharge against its return period on a semi-logar
 \begin{knitrout}
 \definecolor{shadecolor}{rgb}{0.969, 0.969, 0.969}\color{fgcolor}\begin{kframe}
 \begin{alltt}
-\hlcom{### STEP 4}
+\hlcom{### STEP 6}
 \hlcom{### Split the downloaded data into two periods}
 \hlstd{period1} \hlkwb{<-}\hlkwd{subset}\hlstd{(annualpeak, peak_dt}\hlopt{>=}\hlstd{dt_range[}\hlnum{1}\hlstd{]} \hlopt{&} \hlstd{peak_dt}\hlopt{<=}\hlstr{"2010-12-31"}\hlstd{)}
 \hlstd{period2} \hlkwb{<-}\hlkwd{subset}\hlstd{(annualpeak, peak_dt}\hlopt{>=}\hlstr{"2010-12-31"} \hlopt{&} \hlstd{peak_dt}\hlopt{<=}\hlstd{dt_range[}\hlnum{2}\hlstd{])}
@@ -574,20 +576,17 @@ The following plot shows the discharge against its return period on a semi-logar
        \hlkwc{col}\hlstd{=}\hlkwd{c}\hlstd{(}\hlstr{"blue"}\hlstd{,} \hlstr{"red"}\hlstd{),} \hlkwc{pch}\hlstd{=}\hlnum{19}\hlstd{)}
 \end{alltt}
 \end{kframe}
-\includegraphics[width=\maxwidth]{figure/unnamed-chunk-11-1} 
+\includegraphics[width=\maxwidth]{figure/unnamed-chunk-12-1} 
 \end{knitrout}
 \end{figure*}
 
 \subsection{Fit Peak Flow with `Method of Moments`}
 
 
-
-
-
 \begin{knitrout}
 \definecolor{shadecolor}{rgb}{0.969, 0.969, 0.969}\color{fgcolor}\begin{kframe}
 \begin{alltt}
-\hlcom{### STEP 6}
+\hlcom{### STEP 7}
 \hlcom{### Perform Flood Frequency Analysis }
 \hlcom{### Locate the column of your data set that has the peak discharges}
 \hlcom{### You can see that peak discharges are stored in the 6th column (peak_va)}
@@ -620,9 +619,9 @@ The following plot shows the discharge against its return period on a semi-logar
 \begin{alltt}
 \hlcom{# Set up x axis tick positions and labels}
 \hlstd{Ttick} \hlkwb{=} \hlkwd{c}\hlstd{(}\hlnum{1.001}\hlstd{,}\hlnum{1.01}\hlstd{,}\hlnum{1.1}\hlstd{,}\hlnum{1.5}\hlstd{,}\hlnum{2}\hlstd{,}\hlnum{3}\hlstd{,}\hlnum{4}\hlstd{,}\hlnum{5}\hlstd{,}\hlnum{6}\hlstd{,}\hlnum{7}\hlstd{,}\hlnum{8}\hlstd{,}\hlnum{9}\hlstd{,}\hlnum{10}\hlstd{,}\hlnum{11}\hlstd{,}\hlnum{12}\hlstd{,}\hlnum{13}\hlstd{,}
-          \hlnum{14}\hlstd{,}\hlnum{15}\hlstd{,}\hlnum{16}\hlstd{,}\hlnum{17}\hlstd{,}\hlnum{18}\hlstd{,}\hlnum{19}\hlstd{,}\hlnum{20}\hlstd{,}\hlnum{25}\hlstd{,}\hlnum{30}\hlstd{,}\hlnum{35}\hlstd{,}\hlnum{40}\hlstd{,}\hlnum{45}\hlstd{,}\hlnum{50}\hlstd{,}\hlnum{60}\hlstd{,}\hlnum{70}\hlstd{,}\hlnum{80}\hlstd{,}\hlnum{90}\hlstd{,}\hlnum{100}\hlstd{)}
+    \hlnum{14}\hlstd{,}\hlnum{15}\hlstd{,}\hlnum{16}\hlstd{,}\hlnum{17}\hlstd{,}\hlnum{18}\hlstd{,}\hlnum{19}\hlstd{,}\hlnum{20}\hlstd{,}\hlnum{25}\hlstd{,}\hlnum{30}\hlstd{,}\hlnum{35}\hlstd{,}\hlnum{40}\hlstd{,}\hlnum{45}\hlstd{,}\hlnum{50}\hlstd{,}\hlnum{60}\hlstd{,}\hlnum{70}\hlstd{,}\hlnum{80}\hlstd{,}\hlnum{90}\hlstd{,}\hlnum{100}\hlstd{)}
 \hlstd{xtlab} \hlkwb{=} \hlkwd{c}\hlstd{(}\hlnum{1.001}\hlstd{,}\hlnum{1.01}\hlstd{,}\hlnum{1.1}\hlstd{,}\hlnum{1.5}\hlstd{,}\hlnum{2}\hlstd{,}\hlnum{NA}\hlstd{,}\hlnum{NA}\hlstd{,}\hlnum{5}\hlstd{,}\hlnum{NA}\hlstd{,}\hlnum{NA}\hlstd{,}\hlnum{NA}\hlstd{,}\hlnum{NA}\hlstd{,}\hlnum{10}\hlstd{,}\hlnum{NA}\hlstd{,}
-          \hlnum{NA}\hlstd{,}\hlnum{NA}\hlstd{,}\hlnum{NA}\hlstd{,}\hlnum{15}\hlstd{,}\hlnum{NA}\hlstd{,}\hlnum{NA}\hlstd{,}\hlnum{NA}\hlstd{,}\hlnum{NA}\hlstd{,}\hlnum{20}\hlstd{,}\hlnum{NA}\hlstd{,}\hlnum{30}\hlstd{,}\hlnum{NA}\hlstd{,}\hlnum{NA}\hlstd{,}\hlnum{NA}\hlstd{,}\hlnum{50}\hlstd{,}\hlnum{NA}\hlstd{,}\hlnum{NA}\hlstd{,}\hlnum{NA}\hlstd{,}\hlnum{NA}\hlstd{,}\hlnum{100}\hlstd{)}
+    \hlnum{NA}\hlstd{,}\hlnum{NA}\hlstd{,}\hlnum{NA}\hlstd{,}\hlnum{15}\hlstd{,}\hlnum{NA}\hlstd{,}\hlnum{NA}\hlstd{,}\hlnum{NA}\hlstd{,}\hlnum{NA}\hlstd{,}\hlnum{20}\hlstd{,}\hlnum{NA}\hlstd{,}\hlnum{30}\hlstd{,}\hlnum{NA}\hlstd{,}\hlnum{NA}\hlstd{,}\hlnum{NA}\hlstd{,}\hlnum{50}\hlstd{,}\hlnum{NA}\hlstd{,}\hlnum{NA}\hlstd{,}\hlnum{NA}\hlstd{,}\hlnum{NA}\hlstd{,}\hlnum{100}\hlstd{)}
 \hlstd{y} \hlkwb{=} \hlopt{-}\hlkwd{log}\hlstd{(}\hlopt{-}\hlkwd{log}\hlstd{(}\hlnum{1} \hlopt{-} \hlnum{1}\hlopt{/}\hlstd{T))}
 \hlstd{ytick} \hlkwb{=} \hlopt{-}\hlkwd{log}\hlstd{(}\hlopt{-}\hlkwd{log}\hlstd{(}\hlnum{1} \hlopt{-} \hlnum{1}\hlopt{/}\hlstd{Ttick))}
 \hlstd{xmin} \hlkwb{=} \hlkwd{min}\hlstd{(}\hlkwd{min}\hlstd{(y),}\hlkwd{min}\hlstd{(ytick))}
@@ -644,17 +643,10 @@ The following plot shows the discharge against its return period on a semi-logar
 \begin{figure*}
 \begin{knitrout}
 \definecolor{shadecolor}{rgb}{0.969, 0.969, 0.969}\color{fgcolor}
-\includegraphics[width=\maxwidth]{figure/unnamed-chunk-13-1} 
+\includegraphics[width=\maxwidth]{figure/unnamed-chunk-14-1} 
 \end{knitrout}
 \end{figure*}
 
-
-\begin{figure}
-	\centering
-		\includegraphics[width=1.00\textwidth]{figure/WhiteRiver.png}
-		\caption{White River, Arkansas, USGS gage 07052500. Annual peak flow frequency analysis for the period 2000-2025 (left) and 1980-2000 (right). The red dashed line indicates the 2025 projected peak flow.}
-	\label{fig:White River}
-\end{figure}
 
 \clearpage
 \section{Using Functions to Plot Flood Return Intervals}
@@ -694,105 +686,27 @@ As always, let's check the data frame to make sure it looks correct.
 \begin{knitrout}
 \definecolor{shadecolor}{rgb}{0.969, 0.969, 0.969}\color{fgcolor}\begin{kframe}
 \begin{alltt}
-\hlkwd{head}\hlstd{(site03287500)}
+\hlkwd{head}\hlstd{(site03287500)[,}\hlkwd{c}\hlstd{(}\hlnum{1}\hlopt{:}\hlnum{3}\hlstd{,}\hlnum{5}\hlstd{,}\hlnum{7}\hlstd{)]}
 \end{alltt}
 \begin{verbatim}
-##    agency_cd  site_no    peak_dt peak_tm peak_va peak_cd
-## 6       USGS 03287500 1895-01-19    <NA>   41600    <NA>
-## 7       USGS 03287500 1896-03-20    <NA>   47800    <NA>
-## 8       USGS 03287500 1897-02-24    <NA>   76900    <NA>
-## 9       USGS 03287500 1898-01-23    <NA>   59800    <NA>
-## 10      USGS 03287500 1899-03-08    <NA>   76400    <NA>
-## 11      USGS 03287500 1900-03-22    <NA>   29600    <NA>
-##    gage_ht gage_ht_cd year_last_pk ag_dt ag_tm ag_gage_ht
-## 6     16.7       <NA>           NA  <NA>  <NA>         NA
-## 7     19.0       <NA>           NA  <NA>  <NA>         NA
-## 8     32.2       <NA>           NA  <NA>  <NA>         NA
-## 9     25.1       <NA>           NA  <NA>  <NA>         NA
-## 10    29.6       <NA>           NA  <NA>  <NA>         NA
-## 11    12.7       <NA>           NA  <NA>  <NA>         NA
-##    ag_gage_ht_cd
-## 6           <NA>
-## 7           <NA>
-## 8           <NA>
-## 9           <NA>
-## 10          <NA>
-## 11          <NA>
+##    agency_cd  site_no    peak_dt peak_va gage_ht
+## 6       USGS 03287500 1895-01-19   41600    16.7
+## 7       USGS 03287500 1896-03-20   47800    19.0
+## 8       USGS 03287500 1897-02-24   76900    32.2
+## 9       USGS 03287500 1898-01-23   59800    25.1
+## 10      USGS 03287500 1899-03-08   76400    29.6
+## 11      USGS 03287500 1900-03-22   29600    12.7
 \end{verbatim}
 \begin{alltt}
-\hlkwd{str}\hlstd{(site03287500)}
+\hlkwd{str}\hlstd{(site03287500[,}\hlkwd{c}\hlstd{(}\hlnum{1}\hlopt{:}\hlnum{3}\hlstd{,}\hlnum{5}\hlstd{,}\hlnum{7}\hlstd{)])}
 \end{alltt}
 \begin{verbatim}
-## 'data.frame':	125 obs. of  13 variables:
-##  $ agency_cd    : chr  "USGS" "USGS" "USGS" "USGS" ...
-##  $ site_no      : chr  "03287500" "03287500" "03287500" "03287500" ...
-##  $ peak_dt      : Date, format: "1895-01-19" ...
-##  $ peak_tm      : chr  NA NA NA NA ...
-##  $ peak_va      : num  41600 47800 76900 59800 76400 29600 57600 68000 70800 33400 ...
-##  $ peak_cd      : chr  NA NA NA NA ...
-##  $ gage_ht      : num  16.7 19 32.2 25.1 29.6 12.7 24 27 28.5 14.5 ...
-##  $ gage_ht_cd   : chr  NA NA NA NA ...
-##  $ year_last_pk : logi  NA NA NA NA NA NA ...
-##  $ ag_dt        : Date, format: NA ...
-##  $ ag_tm        : chr  NA NA NA NA ...
-##  $ ag_gage_ht   : num  NA NA NA NA NA NA NA NA NA NA ...
-##  $ ag_gage_ht_cd: chr  NA NA NA NA ...
-##  - attr(*, "queryTime")= POSIXct[1:1], format: "2025-04-06 12:58:14"
-##  - attr(*, "url")= chr "https://nwis.waterdata.usgs.gov/usa/nwis/peak/?site_no=03287500&range_selection=date_range&format=rdb"
-##  - attr(*, "headerInfo")=List of 8
-##   ..$ date                       : chr "Sun, 06 Apr 2025 19:58:13 GMT"
-##   ..$ server                     : chr "Apache"
-##   ..$ strict-transport-security  : chr "max-age=31536000"
-##   ..$ amfplus-ver                : chr "1.3.2.2"
-##   ..$ x-ua-compatible            : chr "IE=edge,chrome=1"
-##   ..$ access-control-allow-origin: chr "*"
-##   ..$ transfer-encoding          : chr "chunked"
-##   ..$ content-type               : chr "text/plain; charset=UTF-8"
-##   ..- attr(*, "class")= chr [1:2] "insensitive" "list"
-##  - attr(*, "comment")= chr [1:72] "#" "# U.S. Geological Survey" "# National Water Information System" "# Retrieved: 2025-04-06 15:58:13 EDT" ...
-##  - attr(*, "siteInfo")='data.frame':	1 obs. of  42 variables:
-##   ..$ agency_cd            : chr "USGS"
-##   ..$ site_no              : chr "03287500"
-##   ..$ station_nm           : chr "KENTUCKY RIVER AT LOCK 4 AT FRANKFORT, KY"
-##   ..$ site_tp_cd           : chr "ST"
-##   ..$ lat_va               : num 381241
-##   ..$ long_va              : num 845227
-##   ..$ dec_lat_va           : num 38.2
-##   ..$ dec_long_va          : num -84.9
-##   ..$ coord_meth_cd        : chr "N"
-##   ..$ coord_acy_cd         : chr "1"
-##   ..$ coord_datum_cd       : chr "NAD83"
-##   ..$ dec_coord_datum_cd   : chr "NAD83"
-##   ..$ district_cd          : chr "21"
-##   ..$ state_cd             : chr "21"
-##   ..$ county_cd            : chr "073"
-##   ..$ country_cd           : chr "US"
-##   ..$ land_net_ds          : logi NA
-##   ..$ map_nm               : logi NA
-##   ..$ map_scale_fc         : logi NA
-##   ..$ alt_va               : num 462
-##   ..$ alt_meth_cd          : chr "L"
-##   ..$ alt_acy_va           : num 0.01
-##   ..$ alt_datum_cd         : chr "NAVD88"
-##   ..$ huc_cd               : chr "05100205"
-##   ..$ basin_cd             : chr NA
-##   ..$ topo_cd              : chr NA
-##   ..$ instruments_cd       : chr "NNNNYNNNNNNNNNNNNNNNNNNNNNNNNN"
-##   ..$ construction_dt      : logi NA
-##   ..$ inventory_dt         : logi NA
-##   ..$ drain_area_va        : num 5411
-##   ..$ contrib_drain_area_va: num 5292
-##   ..$ tz_cd                : chr "EST"
-##   ..$ local_time_fg        : chr "Y"
-##   ..$ reliability_cd       : chr NA
-##   ..$ gw_file_cd           : chr "NNNNNNNN"
-##   ..$ nat_aqfr_cd          : chr NA
-##   ..$ aqfr_cd              : chr NA
-##   ..$ aqfr_type_cd         : chr NA
-##   ..$ well_depth_va        : num NA
-##   ..$ hole_depth_va        : num NA
-##   ..$ depth_src_cd         : chr NA
-##   ..$ project_no           : chr "452107100"
+## 'data.frame':	125 obs. of  5 variables:
+##  $ agency_cd: chr  "USGS" "USGS" "USGS" "USGS" ...
+##  $ site_no  : chr  "03287500" "03287500" "03287500" "03287500" ...
+##  $ peak_dt  : Date, format: "1895-01-19" ...
+##  $ peak_va  : num  41600 47800 76900 59800 76400 29600 57600 68000 70800 33400 ...
+##  $ gage_ht  : num  16.7 19 32.2 25.1 29.6 12.7 24 27 28.5 14.5 ...
 \end{verbatim}
 \end{kframe}
 \end{knitrout}
@@ -806,7 +720,7 @@ Now let's see what the flood return interval looks like for the flooding this we
 \hlkwd{plot_floodreturn.fun}\hlstd{(site03287500, Qmax_2025)}
 \end{alltt}
 \end{kframe}
-\includegraphics[width=\maxwidth]{figure/unnamed-chunk-17-1} 
+\includegraphics[width=\maxwidth]{figure/unnamed-chunk-18-1} 
 \end{knitrout}
 
 Finally, we'll split the data and look at how the record changes based on historic and recend data. I created a "list" of two dataframes, but then had to separate them so they would work with my function. See if you can spot the problem with this when you look at the y-axis.
@@ -835,7 +749,7 @@ plot_floodreturn.fun(period2, Qmax_2025)
 %<<out.height='2in', out.width='4in'>>=
 \begin{knitrout}
 \definecolor{shadecolor}{rgb}{0.969, 0.969, 0.969}\color{fgcolor}
-\includegraphics[width=\maxwidth]{figure/unnamed-chunk-19-1} 
+\includegraphics[width=\maxwidth]{figure/unnamed-chunk-20-1} 
 \end{knitrout}
 \end{figure*}
 
@@ -849,7 +763,7 @@ This function retrieves annual peak flow data from the USGS NWIS database. It re
 
 The function also removes any rows with missing values in the peak flow or date columns to ensure that the data is clean and ready for analysis.
 
-usage: (getAnnualPeak.fun(site, startDate=``'', endDate=``'')
+\textbf{usage:} df <- getAnnualPeak.fun(site, startDate=``'', endDate=``'')
 
 Site is the USGS gage number, startDate and endDate are optional arguments. If not provided, the function will return all available data.
 
@@ -859,8 +773,6 @@ Site is the USGS gage number, startDate and endDate are optional arguments. If n
 ## getAnnualPeak.fun <- function (site, startDate = "", endDate = "") 
 ## {
 ##     library(dataRetrieval)
-##     library(ggplot2)
-##     suppressMessages(library(dplyr))
 ##     annualpeak <- readNWISpeak(site, startDate, endDate)
 ##     annualpeak = annualpeak[complete.cases(annualpeak$peak_va), 
 ##         ]
@@ -877,26 +789,27 @@ Site is the USGS gage number, startDate and endDate are optional arguments. If n
 
 \subsection{Split Data Function}
 
+
+\textbf{usage:} periodlist <- function(annualpeak, splitdate)
+
 \begin{knitrout}
 \definecolor{shadecolor}{rgb}{0.969, 0.969, 0.969}\color{fgcolor}\begin{kframe}
-\begin{alltt}
-\hlstd{splitdata.fun}\hlkwb{<-} \hlkwa{function}\hlstd{(}\hlkwc{annualpeak}\hlstd{,} \hlkwc{splitdate}\hlstd{)\{}
-
-    \hlstd{period1} \hlkwb{=} \hlstd{annualpeak[annualpeak}\hlopt{$}\hlstd{peak_dt} \hlopt{<} \hlstd{splitdate,]}
-    \hlstd{period2} \hlkwb{=} \hlstd{annualpeak[annualpeak}\hlopt{$}\hlstd{peak_dt} \hlopt{>=} \hlstd{splitdate,]}
-    \hlstd{periodlist} \hlkwb{=} \hlkwd{list}\hlstd{(period1, period2)}
-  \hlkwd{return}\hlstd{(periodlist)}
-\hlstd{\}}
-\end{alltt}
+\begin{verbatim}
+## splitdata.fun <- function (annualpeak, splitdate) 
+## {
+##     period1 = annualpeak[annualpeak$peak_dt < splitdate, ]
+##     period2 = annualpeak[annualpeak$peak_dt >= splitdate, ]
+##     periodlist = list(period1, period2)
+##     return(periodlist)
+## }
+\end{verbatim}
 \end{kframe}
 \end{knitrout}
 
 \subsection{Plot Flood Return Interval }
 
 
-usage: (plot\_floodreturn.fun(annualpeak.df, Q\_max)
-
-
+\textbf{usage:} (plot\_floodreturn.fun(annualpeak.df, Q\_max)
 
 \begin{knitrout}
 \definecolor{shadecolor}{rgb}{0.969, 0.969, 0.969}\color{fgcolor}\begin{kframe}
@@ -945,7 +858,7 @@ usage: (plot\_floodreturn.fun(annualpeak.df, Q\_max)
 ##     par(cex = 1)
 ##     abline(h = Qmax_2025, lty = 3, lwd = 2, col = "red")
 ## }
-## <bytecode: 0x5bc2788>
+## <bytecode: 0x9e3b9d8>
 \end{verbatim}
 \end{kframe}
 \end{knitrout}
