--- a/11_Flood_Return_Interval/Flood_Return_Inverval.tex
+++ b/11_Flood_Return_Interval/Flood_Return_Inverval.tex
@@ -85,7 +85,7 @@
 
 \title{Flood Frequncy Analysis}
 \author{EA030}
-\date{\today~ver. 0.42}
+\date{\today~ver. 0.48}
 \setkeys{Gin}{width=\linewidth,totalheight=\textheight,keepaspectratio}
 % \graphicspath{{graphics/}}
 
@@ -222,7 +222,7 @@ This method does not assume any underlying distribution.
 Below is the table of calculated return periods for each ranked discharge.
 
 % latex table generated in R 4.2.2 by xtable 1.8-4 package
-% Sun Apr  6 17:49:31 2025
+% Mon Apr  7 09:15:54 2025
 \begin{table}[ht]
 \centering
 \begin{tabular}{rrrr}
@@ -344,7 +344,7 @@ The procedure involves:
 \end{knitrout}
 
 % latex table generated in R 4.2.2 by xtable 1.8-4 package
-% Sun Apr  6 17:49:31 2025
+% Mon Apr  7 09:15:54 2025
 \begin{table}[ht]
 \centering
 \begin{tabular}{rrrr}
@@ -789,8 +789,13 @@ Site is the USGS gage number, startDate and endDate are optional arguments. If n
 
 \subsection{Split Data Function}
 
+The annual peak data frame is the output from the getAnnualPeak function. The splitdate is a string in the format ``YYYY-MM-DD'' that indicates the date to split the data.
+
+The function splits the data into two periods: one before the split date and one after. It returns a list containing two data frames, each representing the respective period.
 
 \textbf{usage:} periodlist <- function(annualpeak, splitdate)
+
+The function takes the annual peak data frame and the split date as input. It returns a list containing two data frames, each representing the respective period.
 
 \begin{knitrout}
 \definecolor{shadecolor}{rgb}{0.969, 0.969, 0.969}\color{fgcolor}\begin{kframe}
@@ -806,10 +811,15 @@ Site is the USGS gage number, startDate and endDate are optional arguments. If n
 \end{kframe}
 \end{knitrout}
 
-\subsection{Plot Flood Return Interval }
+\subsection{Plot Flood Return Interval}
 
+The plot\_floodreturn function takes the annual peak data frame and a maximum flow value for this year (Qmax\_2025) as input. It generates a plot showing the flood return interval based on the annual peak flow data. The function calculates the plotting positions, return intervals, and confidence limits for the fitted line.
+
+The function also includes options for customizing the plot, such as setting the x-axis and y-axis limits, adding grid lines, and drawing confidence intervals. 
 
 \textbf{usage:} (plot\_floodreturn.fun(annualpeak.df, Q\_max)
+
+The function takes the annual peak data frame and the maximum flow value (Qmax\_2025) as input. It generates a plot showing the flood return interval based on the annual peak flow data. 
 
 \begin{knitrout}
 \definecolor{shadecolor}{rgb}{0.969, 0.969, 0.969}\color{fgcolor}\begin{kframe}
@@ -858,7 +868,7 @@ Site is the USGS gage number, startDate and endDate are optional arguments. If n
 ##     par(cex = 1)
 ##     abline(h = Qmax_2025, lty = 3, lwd = 2, col = "red")
 ## }
-## <bytecode: 0x9e3b9d8>
+## <bytecode: 0x9cb8ae8>
 \end{verbatim}
 \end{kframe}
 \end{knitrout}
